# noisesensor

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  keywords.txt  library.properties  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_noisesensor.yml  tests.yml
core/: CMakeLists.txt
core/include/: acoustic_indicators.h  third_octave_const.h
core/src/: acoustic_indicators.c  audio_analyzer.c
core/test/: out.csv  sinus1khz_32000Hz_24bitsPCM_2s.raw  sinus1khz_32000Hz_float32_1024samples.raw  test_acoustic_indicators.c  test_fft.c  ut_reference.py
examples/: config_48000_third_octave.json  generate_config.py  generate_kotlin_config.py  json_to_audio.py  spectrogram.py
examples/MXChipTHD/: MXChipTHD.ino
noisepy/: __init__.py  cnoisepy.pxd  noisepy.c  noisepy.pyx  wrapped.c  wrapped.pyx
noisepy/test/: test_cython_examples.py  test_noisepy.py
service/: analyze_thdn.py  audio_trigger_test.py  compare_iso_with_noisepy.py  demo.sh  launch.sh  noisesensor.py  noisesensor_thdn.py  pixljs_ble.js  thd_analyze.py  zero_ble.py  zero_display.py  zero_indicators.py  zero_record.py  zero_trigger.py  zerorecord.service
service/test/: ref_audio.csv  test2_far.csv  test2_far_far.csv  test_filter.py  thdtest.sh
service/zero_trigger/: .dockerignore  Dockerfile  README.md  requirements.txt  sample_zerotrigge.service  setup.py
services/: README.md  audio_trigger_test.py  configftpsample.json  requirements.txt  zero_filestorage.py  zero_indicators.py  zero_play.py  zero_record.py  zero_trigger.py  zerorecord.service
services/ansible_openvpn/: README.md  openvpn_ansible.py
services/pixljs_alert/: generate_qrcode_js.py  mode2_test.js  pixljs_ble.js  pixljs_ble_juin.js  requirements.txt  zero_ble.py
services/rpi_systemd/: 50-localusb.rules  restart_usb.py  zeroble.service  zerogps.service  zeroindicators.service  zeroindicators_config.json  zerorecord.service  zerostorage.service  zerostorage_indicators.service  zerotrigger.service  zerotrigger_config.json
services/telit/: README.md  autoconnect.py  kibana_map.json  requirements.txt  zero_location.py
services/test/: graphs.py  noisesensor_thdn.py  test1_near.csv  test_background.csv  test_zerotrigger.py  thdtest.sh
services/website_dashboard/: README.md  requirements.txt
src/: acoustic_indicators.c  acoustic_indicators.h  third_octave_const.h
src/noisesensor/: biquadfilter.py  digitalfilter.py  filterdesign.py  spectrumchannel.py
test/: num_denom_coeff.py  ref38dB_48000Hz_32bitsPCM.raw  ref94dB_48000Hz_32bitsPCM.raw  test_acoustic_indicators.c  ut_reference.py
tests/: __init__.py  speak_32000Hz_16bitsPCM_10s.raw  test_biquad_filter.py  test_filter.py  test_noisepy.py  test_weighting_filter.py
third_parties/: generate_threshold_csv.py
third_parties/yamnet/: Dockerfile  (+6 more)
tools/: filterdesign.py
(+60 files in other folders)
